# itaca-api

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: ci.yml
app/: auth.py  config.py  main.py  schemas.py
app/routers/: audits.py  datasets.py  meta.py
app/services/: audit_runner.py  storage.py
docs/: DESIGN.md
examples/: README.md  model_config.json  run_examples.py
keycloak/: realm-export.json
tests/: conftest.py  test_audits_flow.py  test_auth.py  test_schemas.py
