[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "itaca-api"
version = "0.1.0"
description = "REST API wrapper for ITACA (AI fairness auditing) with Keycloak integration — DataPACT/ASSIST deployment artifact"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Eticas AI", email = "info@eticas.ai" }]
license = { text = "Apache-2.0" }
dependencies = [
    "eticas-audit>=0.1.7,<0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyJWT[crypto]>=2.8",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "flake8>=7.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
